# alphaStral

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
benchmark/: __init__.py  export.py  runner.py  types.py
bot/: __init__.py  agent.py  extractor.py  parser.py  player.py  schema.py
bot/agents/: __init__.py  _shared.py  hf.py  local.py  mistral.py  random.py
finetune/: finetune_colab.ipynb  scraper.py
runs/: mistral-ministral-8b-latest_vs_random_n50_e5c02a.json  mistral-mistral-medium-2508_vs_random_n1_a3dd2f.json  mistral-mistral-medium-2508_vs_random_n5_88b43d.json
viz/: __init__.py  __main__.py  charts.py  loader.py  report.py
